# Hex

./: Hex  Hex.cpp  Hex.py  Makefile  Posibles mejoras  README  a.out  app.js  node.js  test.py
cloud_code/: CMakeLists.txt  Dockerfile  README  cloud_run_hello.cc
cloud_static/: Hex.html  Hex.js
public/: Hex.css  Hex.js  make_move.js
views/: Hex.css  Hex.html  Hex.js  footer.html  header.html  make_move.js
